src/css/_apparel.scss
.apparel-selector-container{
  text-align: center;
}
.apparel-selector{
  font-size: 1.5em;
  text-align: center;
  color: $primary-blue;
  border: 2px solid $primary-blue;
  padding:0.5em;
  width: 250px;
  margin:0;
}
.apparel-selector:hover,
.apparel-selector:active{
  color:#fff;
}
.apparel-selector:after{
  background: $primary-blue;
}
.apparel-selection{
  padding-left: 4em;
  padding-right: 4em;
}
.apparel-selection-description{
  text-align: center;
}
.apparel-list{
  padding-left:4em;
}
#colorSwatchItem{
  text-align: center;
  margin:0 auto;
}
#colorSwatchImg > img {
  max-width: 175px;
}
.quote{
  text-decoration: underline;
  color: $primary-orange;
}

@media screen and (max-width: 768px) {
  .apparel-selection{
    padding-left: 2em;
    padding-right: 2em;
  }
  .apparel-selector{
    font-size: 1.5em;
    width:95%;
    margin-top:0.1em;
    margin-bottom:0.1em;
    padding:0.2em;
    margin:0;
  }
  .apparel-selection-description{
    text-align:left;
  }

}

